[+] Updated versioning and added build date and build number